fix(md): git link overflow

--- a/app/scripts/modules/core/src/managed/overview/baseStyles.less
+++ b/app/scripts/modules/core/src/managed/overview/baseStyles.less
@@ -63,6 +63,7 @@
   .git-link {
     display: flex;
     flex-direction: column;
+    min-width: 0;
 
     .HoverablePopover {
       display: flex;
